import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'io.github.goooler.shadow'
}

evaluationDependsOn(':common')

sourceSets {
    main {
        java.srcDirs = ['src']
        resources.srcDirs = ['resources']
    }
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

dependencies {
    api project(':common')
    compileOnly 'com.github.Minestom:Minestom:19bb74e942'
    // https://mvnrepository.com/artifact/dev.hollowcube/minestom-ce-extensions
	compileOnly 'dev.hollowcube:minestom-ce-extensions:1.2.0'
    
    compileOnly 'io.netty:netty-all:4.1.110.Final'
}

processResources {
    inputs.property "version", project.version

    filesMatching("extension.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

shadowJar {
    archiveBaseName.set('NegativityMinestom')
    archiveAppendix.set('1.20.4')
    archiveClassifier.set(null)

    mergeServiceFiles()
    from(project(':common').tasks.shadowJar)
}

build.dependsOn shadowJar

parent.tasks.named('shadowJar', ShadowJar) {
    it.from(shadowJar.outputs)
}

task prepareServer(type: Copy) {
    from shadowJar
    rename { 'negativity.jar' }
    def pluginDir = System.getProperty('plugins.dir')
    if (pluginDir == null) {
        enabled(false)
    } else {
        into pluginDir
    }
}
